# hsffi

./: .gitignore  Makefile  flake.nix  hsffi.cabal
src/Internal/: LibClang.hs
src/c/: Makefile  h.h  main.cc
