cabal-version: 3.8
name:          hsffi
version:       0.1.0.0
synopsis:      generate c/c++ bindings
author:        ml
maintainer:    metaml@gmail.com
build-type:    Simple

common warnings
    ghc-options: -Wall -O2 -threaded

library
  exposed-modules:    Internal.LibClang
  hs-source-dirs:     src
  ghc-options:        -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fno-warn-type-defaults -flate-specialise -fspecialise-aggressively
  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , BlockArguments
                    , ConstraintKinds
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveFunctor
                    , DeriveGeneric
                    , DerivingVia
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , OverloadedLabels
                    , OverloadedStrings
                    , OverloadedStrings
                    , PatternSynonyms
                    , PolyKinds
                    , PolyKinds
                    , QuasiQuotes
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , StrictData
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances
                    , ViewPatterns
  build-depends:      aeson
                    , aeson-optics
                    , base
                    , bytestring
                    , clang-pure
                    , exceptions
                    , inline-c
                    , optics-core
                    , optparse-applicative
                    , streamly-core
                    , text
                    , time
                    , uuid
                    , vector

executable ffi
    import:           warnings
    main-is:          ffi.hs
    build-depends:    base
                    , hsffi
    hs-source-dirs: app
    default-language: Haskell2010

